Use react-headroom to scroll header in and out of view -- fix other UI

--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,7 @@
 
 * {
   font-family: poppins !important;
+  scrollbar-width: none !important;
 }
 
 body {
